--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-redash": "^14.2.3",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
